=======
CHANGES
=======

0.3 (unreleased)
----------------

- ...


0.2 (2011-12-21)
----------------

- require pyramid 1.3


0.1.1 (2011-12-05)
------------------

- Fix rst renderer


0.1 (2011-11-19)
----------------

- Initial release